--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-matplotlib
-opencv-python
-torch
-torchvision
+numpy==1.24.3
+pandas==2.0.1
+matplotlib==3.7.1
+opencv-python==4.7.0.72
+torch==2.0.1
+torchvision==0.15.2
